# cradle

./: .gitignore  CHANGELOG.md  Cargo.toml  PRD-cradle.md  README.md
agent/: AUTOBUILDER_PROGRAM.md  intent-card.json  proof-lanes.toml
crates/cradle-features/: Cargo.toml
crates/cradle-features/src/: lib.rs
crates/cradle-harvest/: Cargo.toml
crates/cradle-harvest/src/: lib.rs  spec.rs
models/playbook-match/: spec.toml
models/redirect/: spec.toml  train.py
models/session-productivity/: spec.toml
src/: cli.rs  lib.rs  main.rs  orchestrator.rs
tests/: acceptance_ac1.rs  acceptance_ac10.rs  acceptance_ac11.rs  acceptance_ac12.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_ac8.rs  acceptance_ac9.rs
