[package]
name = "cradle-harvest"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false
description = "Transcript JSONL → labeled examples + deterministic split for cradle"
repository = "https://github.com/j0yen/cradle"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
cradle-features = { path = "../cradle-features", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
